Remove State attribute and associated code generation
The State attribute involved generating an intermediate base class
to add the needed behaviour which was a bit hacky, hard to follow
and error prone. The lazy write state functionality is now a class
(GrainStateLazyWriteHandler).

--- a/src/ETG.Orleans/ETG.Orleans.csproj
+++ b/src/ETG.Orleans/ETG.Orleans.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Attributes\ApiControllerAttribute.cs" />
     <Compile Include="Attributes\ReadOnlyAttribute.cs" />
     <Compile Include="Attributes\SingleWriterMultipleReadersAttribute.cs" />
-    <Compile Include="Attributes\StateAttribute.cs" />
+    <Compile Include="GrainStateLazyWriteHandler.cs" />
     <Compile Include="Swmr\ConsistentHashRing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Swmr\ITopology.cs" />
