Fix VSIX license issue

--- a/VSTemplates/ETG.Orleans.Templates.VSIX/ETG.Orleans.Templates.VSIX.csproj
+++ b/VSTemplates/ETG.Orleans.Templates.VSIX/ETG.Orleans.Templates.VSIX.csproj
@@ -170,6 +170,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="Terms.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
